<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_clients">

    <fragment
        android:id="@+id/navigation_clients"
        android:name="ru.scopatom.travelapp.ui.clients.ClientsFragment"
        android:label="@string/title_clients"
        tools:layout="@layout/fragment_clients" />

    <fragment
        android:id="@+id/navigation_requests"
        android:name="ru.scopatom.travelapp.ui.requests.RequestsFragment"
        android:label="@string/title_requests"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@+id/navigation_tours"
        android:name="ru.scopatom.travelapp.ui.tours.ToursFragment"
        android:label="@string/title_tours"
        tools:layout="@layout/fragment_tours" />
</navigation>