<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_text"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edittext_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edittext_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/button_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/sign_in_button"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>